--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "colors": "^1.1.2",
     "http_ece": "^0.2.0",
-    "urlsafe-base64": "^1.0.0"
+    "urlsafe-base64": "^1.0.0",
+    "jws": "^3.1.1"
   },
   "devDependencies": {
     "dmg": "^0.1.0",
